Update styles to prevent ribbon and title overlap
* Seeing this on currently live auction

--- a/app/assets/stylesheets/components/_auctions-index.scss
+++ b/app/assets/stylesheets/components/_auctions-index.scss
@@ -24,6 +24,11 @@
   margin-top: $site-margins;
 }
 
+.index-issue-title {
+  font-size: 2.5rem;
+  margin-top: 1rem;
+}
+
 .issue-vitals {
   font-size: $h5-font-size;
   font-style: oblique;
